--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -24,7 +24,7 @@
                     <button type="button"  class="right orange-button" id="insert_policequad" >Insert PoliceQuad</button>
                 </div>
                 <div style="width: 70%" class="app_desc">
-                    <button type="button"  class="right orange-button" id="insert_biomechanic" >Insert BioMechanic</button>
+                    <button type="button"  class="right orange-button" id="insert_runkittyrun" >Insert Run Kitty Run</button>
                 </div>
                 <div style="width: 70%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_turtle" >Insert TurtleJS</button>
@@ -32,6 +32,9 @@
 
                 <div style="width: 90%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_earth_rotation" >Insert Motion of the Earth</button>
+                </div>
+                <div style="width: 90%" class="app_desc">
+                    <button type="button"  class="right orange-button" id="insert_physics-video-player" >Insert Physics Video Player</button>
                 </div>
             </div>
 </div>
