--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -70,12 +70,11 @@
 {% endblock %}
    
 
-
     <div class="row overlay-head">
         {% if edit or not asset_obj.name %}
             <a class="right close-reveal-modal reveal-modal-overlay" aria-label="Close">&#215;</a>
         {% endif %}
-        <div class="small-12 colums">
+        <div class="small-9 columns">
             {% if not edit and asset_obj.name %}
                 {% if asset_obj.created_by == request.user.id or is_gstaff %}
                 <p class="left">&nbsp;&nbsp;{{asset_obj.name}}</p>
@@ -87,12 +86,31 @@
                 {% else %}
                     <i><small><label class="lbl_tag">{% trans "No tags defined yet!" %}</label></small></i>
                 {% endif %}
-                <a class="fi-pencil right createAsset" data-asset_id='{{asset_obj.pk}}'>Edit</a>
+
+               <i><p style="color: gray">{{asset_obj.content|safe|striptags}} </p></i>      
+
                 {% endif %}
             {% else %}
                 <h3 class="left overlay-title">&nbsp;{% if not asset_obj %} Add a new {% else %} Edit {% endif %} asset</h3>
                 <button type="button" class="right blue-white-button save-asset" data-asset_id='{{asset_obj.pk}}'>Save Asset</button>
             {% endif %}
+        </div>
+        <div class="small-3 columns">
+                <span data-dropdown="asset-settings-drop" aria-controls="asset-settings-drop" aria-expanded="false" class="orange-button right">
+                    Options
+                </span>
+                <ul id="asset-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
+                <li> <a class="createAsset" data-asset_id='{{asset_obj.pk}}'>Edit</a></li>
+                <li><a class="edit-metadata">Edit Metadata</a></li>
+                <li>
+                    {% if asset_obj %}
+                        {% get_relation_node asset_obj.pk  'has_assetcontent' as asset_cont_grel %}
+                        {% if not asset_cont_grel %}
+                        <a class="delete-asset">Delete Asset</button>
+                        {% endif  %}
+                    {% endif  %}
+                </li>
+            
         </div>
     </div>
         <div class="row">
@@ -107,30 +125,28 @@
             </div>
         </div>
         <div class="row">
-            <div class="small-12 medium-6 large-6 columns">
-                <label>
-                    {% if not edit and asset_obj %}
-                       <i><p style="color: gray">{{asset_obj.content|safe|striptags}} </p></i>
-                    {% else %}
-                        Asset description *
-                </label>
-                        <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter Description" id="asset-descid" value=''>{% if asset_obj %} {{asset_obj.content|safe|striptags}}{% endif %}</textarea>
-                    {% include 'ndf/widget_tags.html' with node=asset_obj %}
+            <div class="small-12 medium-12 large-12 columns">
+                    <label>
+                        {% if edit and asset_obj %}
+                            Asset description *
+                            </label>
+                            <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter Description" id="asset-descid" value=''>{% if asset_obj %} {{asset_obj.content|safe|striptags}}{% endif %}</textarea>
+                            {% include 'ndf/widget_tags.html' with node=asset_obj %}
                             {% get_language_info_list for LANGUAGES as languages %}
-                    <select class="asset-lang" name="lan" id="asset_lang" >
-                            {% for language in languages %}
-                            {% if asset_obj.language.0 == language.code  %}
-                                <option selected data-sub-lang="{{ language.name }}" data-sub-code="{{ language.code }}">
-                                {{language.name}}
-                            {%  else %}
-                                <option data-sub-lang="{{ language.name }}" data-sub-code="{{ language.code }}">
-                                  {{ language.name }}
-                                </option>
-                            {% endif %}
-                            {% endfor %}
-                          </select>
+                            <select class="asset-lang" name="lan" id="asset_lang" >
+                                {% for language in languages %}
+                                {% if asset_obj.language.0 == language.code  %}
+                                    <option selected data-sub-lang="{{ language.name }}" data-sub-code="{{ language.code }}">
+                                    {{language.name}}
+                                {%  else %}
+                                    <option data-sub-lang="{{ language.name }}" data-sub-code="{{ language.code }}">
+                                      {{ language.name }}
+                                    </option>
+                                {% endif %}
+                                {% endfor %}
+                            </select>
 
-                    {% endif %}
+                {% endif %}
 
             </div>
         </div>
@@ -165,53 +181,43 @@
             {% if asset_obj.created_by == request.user.id or is_gstaff %}
             <div class="transcript_files row">
 
-            <div class="small-8 columns">
-                <form class="dropzone" id ="docPost" enctype="multipart/form-data" method="post" action="{% url 'add_assetcontent' group_id %}" >
-                    <input type="file" id="docFile" class="asset_content_upload" placeholder="" name=""/>
-                </form>
-            </div>
 
             </div>
 
         </div>
 
         <div class="name-desc-asset-cont-area hide">
+
             <div class="row">
                 <div class="small-8 medium-6 large-6 columns">
                     <label>Enter File Name *
                         <input type="text" placeholder="Enter File name" class="required" id = "asset_content_name" name="" />
                     </label>
+                <form class="dropzone" id ="docPost" enctype="multipart/form-data" method="post" action="{% url 'add_assetcontent' group_id %}" >
+                    <input type="file" id="docFile" class="asset_content_upload" placeholder="" name=""/>
+                </form>
+
                 </div>
-            </div>
-            <div class="row">
                 <div class="small-8 medium-6 large-6 columns">
                 <label>Enter File Description *<br/>
                     <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter File Description" id="asset_content_desc"></textarea>
                 </label>
-                </div>
-                <div class="small-4 columns">
-                    <button type="button" class="orange-button hide" id="upload_asset" onclick="save_form()">Upload File</button>
-                </div>
+                    <button type="button" class="orange-button right" id="upload_asset" onclick="save_form()">Upload</button>
 
-
+                </div>
             </div>
+
         </div>
         <!--<button type="button" class="right orange-button save-asset" onclick="save_asset_cont_data()">Save Asset</button>-->
         <input type="hidden" name="context_name" value="{{title}}">
         <input type="hidden" class ="asset_obj_val" name="asset_obj_name" data-asset-obj-val="">
 
-        {% if asset_content_list %}
+        {% if asset_content_list.grel_id %}
         <div class="row">
+            <button type="button" class="orange-button add-asset-content right">Add Files</button>
             <button type="button" class="orange-button delete-asset-content right" title="Click on the checkbox on the files below to Delete">Delete Files</button>
-            <button type="button" class="orange-button edit-metadata right">Edit Metadata</button>
         </div>
         {% endif %}
-        {% get_relation_node asset_obj.pk  'has_assetcontent' as asset_cont_grel %}
-        {% if not asset_cont_grel %}
-        <div class="row">
-            <button type="button" class="orange-button delete-asset right">Delete Asset</button>
-        </div>
-        {% endif  %}
         {% endif %}
 
 
@@ -272,7 +278,8 @@
 
 <script type="text/javascript">
 
-    $("#docFile").change(function(){
+    $(".add-asset-content").click(function(){
+        alert("close")
         $(".name-desc-asset-cont-area").removeClass("hide")
         $("#upload_asset").removeClass("hide")
     });
