--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -45,6 +45,11 @@
 
 
     <div id="page_listing">
+    {% if all_pages.count %}
+    <div class="row">
+        <button type="button" class="orange-button delete-activity right" title="Click on the checkbox on the files below to Delete">Delete Activity</button>
+    </div>
+    {% endif %}
         <div class="row">
             {% for each in all_pages %}
                 <a class="view-page" data-page-id="{{each.pk}}" data-node-name="{{each.name}}" title="{{each.name}}" href="{% url 'view_course_page' group_id each.pk %}">
@@ -61,6 +66,9 @@
                             </div>
                             <div class="asset_text">
                                 <div class="asset_title" title="{{each.name}}">{{each.name|truncatechars:25}}</div>
+                                    {% if user.is_authenticated  and not group_object.edit_policy == "NON_EDITABLE"  or gstaff_access %}
+                                    <input type="checkbox" class="activitynode" name="activitynode" value="{{each.pk}}" style="margin:0; float:right;" class="asset_content_checkbox">
+                                    {% endif %}
                                 <div class="asset_desc">{{each.content|safe|striptags|truncatechars:35}}</div>
                             </div>
                         </div>
@@ -74,3 +82,43 @@
 
 {% endif %}
 
+<script type="text/javascript">
+    $(".delete-activity").click(function(){
+        var checked = $('.activitynode:checked').length;
+        if (checked > 0){
+
+            if (confirm("Do you want to delete selected files?.") == true) {
+                coll_arr = []
+                $('.activitynode:checked').each(function() {
+                    coll_arr.push($(this).val());
+                });
+
+                $.ajax({
+                          type: "POST",
+                          data:{
+                                'csrfmiddlewaretoken': "{{csrf_token}}",
+                                'delete_files_list' : coll_arr,
+                            },
+                          url: "{% url 'delete_activity_page' group_id %}",
+                          datatype: "json",
+                          success: function(data) {
+                            console.log(data)
+                            if (data=="success"){
+                                location.reload()
+                            }
+                            else{
+                                alert("Something went wrong. Please try again later.")
+                            }
+                        }
+                    });
+
+                }
+        }
+        else{
+            alert("Choose atleast one Activity");
+        }
+
+
+    });
+    
+</script>
