--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -8,7 +8,7 @@
             <div class="small-6 columns">
                 <h4 class="page-name">{{activity_node.name}}</h4>
             </div>
-            <div class="small-2 columns">
+            <div class="small-4 columns">
                  {% if activity_node.tags %}
                     {% for tag in activity_node.tags %}
                             <small><label class="lbl_tag label">
@@ -18,14 +18,16 @@
                     <i><small><label class="lbl_tag">{% trans "No tags defined yet!" %}</label></small></i>
                 {% endif %}   
             </div>
-            
-                <a href="{% url 'all_translations' group_id activity_node.pk %}">Translate</a>
-            </div>
+
             <div class="small-2 columns">
-                <a href="{% url 'edit_course_page' group_id activity_node.pk %}">Edit</a>
-            </div>
-            <div class="small-2 columns ">
-                <a href="{% url 'course_pages' group_id %}" >Back to Activities</a>
+                <span data-dropdown="activity-page-settings-drop" aria-controls="activity-page-settings-drop" aria-expanded="false" class="orange-button right">
+                    Options
+                </span>
+                <ul id="activity-page-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
+            
+                <li><a href="{% url 'all_translations' group_id activity_node.pk %}">Translate</a></li>
+                <li><a href="{% url 'edit_course_page' group_id activity_node.pk %}">Edit</a></li>
+                <li><a href="{% url 'course_pages' group_id %}" >Back to Activities</a></li>
             </div>
         </div>
         <div class="row activity-detail-content">
