--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -2897,3 +2897,10 @@ ul.jqtree-tree .jqtree-toggler {
 .activity-editor{
     margin:50px;
 }
+
+.tag-ele{
+    display: inline-block;
+    font-size: 0.80rem !important;
+    background-color: gold !important;
+
+}
