--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -11,10 +11,6 @@
         margin-top: 0.1rem !important;
         text-align: center;
     }
-    .lbl_tag{
-        display: inline-block;
-        font-size: 0.80rem !important;
-    }
 </style>
 {% endblock %}
    
@@ -27,13 +23,15 @@
             {% if not edit and asset_obj.name %}
                 {% if asset_obj.created_by == request.user.id or is_gstaff %}
                 <p class="left">&nbsp;&nbsp;{{asset_obj.name}}</p>
+
+
                 {% if asset_obj.tags %}
                     {% for tag in asset_obj.tags %}
-                            <small><label class="label">
+                            <small><label class="tag-ele">
                         <a href="{% url 'tag_info' group_id tag %}">{{tag}} </a></label></small>
                     {% endfor %} 
                 {% else %}
-                    <i><small><label class="lbl_tag">{% trans "No tags defined yet!" %}</label></small></i>
+                    <i><small><label>{% trans "No tags defined yet!" %}</label></small></i>
                 {% endif %}
 
                <i><p style="color: gray">{{asset_obj.content|safe|striptags}} </p></i>      
