--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -11,11 +11,11 @@
             <div class="small-4 columns">
                  {% if activity_node.tags %}
                     {% for tag in activity_node.tags %}
-                            <small><label class="lbl_tag label">
+                            <small><label class="tag-ele">
                         <a href="{% url 'tag_info' group_id tag %}">{{tag}} </a></label></small>
                     {% endfor %} 
                 {% else %}
-                    <i><small><label class="lbl_tag">{% trans "No tags defined yet!" %}</label></small></i>
+                    <i><small><label>{% trans "No tags defined yet!" %}</label></small></i>
                 {% endif %}   
             </div>
 
