--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_metadata.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_metadata.html
@@ -1,5 +1,6 @@
 {% load i18n %}
 {% load ndf_tags %}
+ <form data-abide id="form-edit-node" method="POST"   action="{% url 'save_metadata' group_id %}" enctype="multipart/form-data">
 <div class="row">
         <div class="small-12 large-12 columns"><h4>{% trans "Please add or edit Metadata" %} </h4></div>
         <!-- Educational Language is Removed from ndf tags and here  __ Saurabh -->
@@ -87,7 +88,19 @@
     </div>
   </div>
   </div>
-    <button type="button" class="right blue-white-button save-metadata">Save Changes</button>
+{% csrf_token %}
+      <input type="hidden" name="node_id" class="form_node_id" value="{{node.pk}}">
+
+        <div class="small-12 large-4 columns">
+        <label><h5>Interaction</h5></label>
+      {% get_attribute_value node.pk "player_discussion_enable" as attr_pl_desc %}
+      {{attr_val}}
+      <input type="radio" name="thread_create"   value="Yes">Yes &nbsp;&nbsp;
+      <input type="radio" name="thread_create" value="No" checked="checked">No
+      </div>
+  </form>
+        </div>
+    <button type="submit" class="right blue-white-button save-metadata">Save Changes</button>
     <button type="button" class="right blue-white-button cancel-metadata">Cancel</button>
 <script type="text/javascript">
   $( ".save-metadata" ).click(function(event) {
@@ -129,4 +142,18 @@
   $( ".cancel-metadata" ).click(function(event) {
     $('#addAsset').foundation('reveal', 'close');     
   });
+
+ 
+   
+$(document).ready(function(){
+    {% if attr_pl_desc %}
+        $("input[name='thread_create'][value='Yes']").attr("checked","checked");
+    
+    {% else %}
+        // $("input[name='thread_create']").attr("disabled",true);
+        $("input[name='thread_create'][value='No']").attr("checked","checked");
+    {% endif %}
+  
+  });
+
 </script>
